<resources>
    <string name="app_name">دانشگاه شهرکرد</string>
    <string name="shahrekord_university">دانشگاه شهرکرد</string>
    <string name="app_email">app@sku.ac.ir</string>

    <!-- AboutActivity -->
    <string name="bug_report">گزارش مشکلات اندروید</string>
    <string name="send_email_to_support">ارسال ایمیل به پشتیبانی</string>

    <!-- API Fail message -->
    <string name="unable_to_connect_to_the_server">هنگام اتصال به سرور مشکلی وجود دارد! لطفا دوباره تلاش کنید.</string>

    <string name="try_again">تلاش مجدد</string>
    <string name="exit_message">برای خروج برنامه دو بار کلید بازگشت را فشار دهید.</string>

    <!-- Fragment Home -->
    <string name="support">ارتباط با پشتیبانی</string>
    <string name="support_report">گزارش مشکلات اپلیکیشن</string>

    <string name="disconnect_title">عدم اتصال به اینترنت</string>
    <string name="disconnect_description">اتصال شما به اینترنت برقرار نیست. برای استفاده از این سرویس به اینترنت متصل شوید.</string>
    <string name="disconnect_wifi">اینترنت Wi-Fi</string>
    <string name="disconnect_data">اینترنت موبایل</string>
    <string name="connection_fail">مشکلی در اتصال به اینترنت به وجود آمده!</string>
    <string name="user">شناسه کاربری</string>
    <string name="password">کلمه عبور</string>
    <string name="security_tag">عبارت امنیتی</string>
    <string name="enter">ورود</string>
    <string name="increase_credit">افزایش اعتبار</string>
    <string name="next_week">هفته بعد</string>
    <string name="back_week">هفته قبل</string>
    <string name="dinner">شام</string>
    <string name="lunch">ناهار</string>
    <string name="breakfast">صبحانه</string>
    <string name="condition">روز / وعده</string>
    <string name="reservation">رزرو</string>
    <string name="student_deputy">معاونت دانشجویی</string>
    <string name="sku_album">آلبوم عکس دانشگاه شهرکرد</string>
    <string name="saturday">شنبه</string>
    <string name="sunday">یک شنبه</string>
    <string name="monday">دوشنبه</string>
    <string name="tuesday">سه شنبه</string>
    <string name="wednesday">چهارشنبه</string>
    <string name="thursday">پنج شنبه</string>
    <string name="friday">جمعه</string>
    <string name="restaurant">رستوران</string>
    <string name="food">غذا</string>
    <string name="select">انتخاب کنید</string>
    <string name="buy">خرید</string>
    <string name="close">بستن</string>
    <string name="delete">حذف</string>
    <string name="my_credit_text">لطفا نوع و مبلغ اعتبار را انتخاب نمایید</string>
    <string name="type_credit">نوع اعتبار</string>
    <string name="amount_credit">مبلغ اعتبار</string>
    <string name="payment">اتصال به درگاه پرداخت</string>
    <string name="unsuccessfulOperation">عملیات ناموفق</string>
    <string name="home">خانه</string>
    <string name="foodReservation">رزرو غذا</string>
    <string name="processes">فرایند ها</string>
    <string name="messages">پیام ها</string>
    <string name="enterSecurityCode">لطفا کد امنیتی را وارد کنید</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>
    <string name="guess">www.sku.ac.ir</string>
    <string name="notification_text">معاونت فرهنگی دانشگاه شهرکرد</string>

    <string name="pdf_show_local_progress_title">pdf_show_local_progress_title</string>
    <string name="pdf_show_local_progress_content">pdf_show_local_progress_content</string>
    <string name="pdf_show_online_dialog_title">pdf_show_online_dialog_title</string>
    <string name="pdf_show_online_dialog_question">pdf_show_online_dialog_question</string>
    <string name="pdf_show_online_dialog_button_no">pdf_show_online_dialog_button_no</string>
    <string name="pdf_show_online_dialog_button_yes">pdf_show_online_dialog_button_yes</string>

    <string name="messagePagerTitle_1">همه</string>
    <string name="messagePagerTitle_2">فوری</string>
    <string name="messagePagerTitle_3">ناخوانده</string>
    <string name="messagePagerTitle_4">خوانده</string>
    <string name="messagePagerTitle_5">ارسال شده</string>

    <string name="all">all</string>

    <string name="immediate">immediate</string>
    <string name="unread">unread</string>
    <string name="read">read</string>
    <string name="send">send</string>

    <string-array name="messagePagerTitle">
        <item>@string/messagePagerTitle_1</item>
        <item>@string/messagePagerTitle_2</item>
        <item>@string/messagePagerTitle_3</item>
        <item>@string/messagePagerTitle_4</item>
        <item>@string/messagePagerTitle_5</item>
    </string-array>

    <string-array name="typeMessages">
        <item>@string/all</item>
        <item>@string/immediate</item>
        <item>@string/unread</item>
        <item>@string/read</item>
        <item>@string/send</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="favnet">کلیه حقوق اپلیکیشن متعلق به شرکت فاونت می باشد.</string>
    <string name="update_application">به روزرسانی اپلیکیشن</string>
    <string name="update">به روزرسانی</string>
    <string name="food_reservation">رزرو غذا</string>
    <string name="dormitory_office">اداره خوابگاه ها</string>
    <string name="nutrition_office">اداره تغذیه</string>
    <string name="welfare_office">اداره رفاه دانشجویان</string>
    <string name="clinic">درمانگاه دانشگاه</string>
    <string name="counseling_center">مرکز مشاوره</string>
    <string name="commission">کمیسیون موارد خاص</string>
    <string name="physical_education">اداره تربیت بدنی</string>
    <string name="search">جست و جو</string>
    <string name="profile">نمایه من</string>
    <string name="grouping">دسته بندی ها</string>
    <string name="special_offer">پیشنهاد ویژه</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ad_categories">دسته بندی آگهی ها</string>
    <string name="more">بیشتر</string>

</resources>
