<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix">

    <item
        android:id="@+id/tab_Home"
        fontPath="fonts/IRANSans.ttf"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/tab_FoodReservation"
        fontPath="fonts/IRANSans.ttf"
        android:icon="@drawable/ic_serving"
        android:title="@string/foodReservation" />

    <item
        android:id="@+id/tab_Processes"
        fontPath="fonts/IRANSans.ttf"
        android:icon="@drawable/ic_process"
        android:title="@string/processes" />

    <item
        android:id="@+id/tab_Messages"
        fontPath="fonts/IRANSans.ttf"
        android:icon="@drawable/ic_message"
        android:title="@string/messages" />

</menu>