<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_10sdp"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center_horizontal"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center_horizontal"
                android:layoutDirection="ltr"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_disconnect" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layoutDirection="ltr"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp">

            <TextView
                fontPath="fonts/IRANSansMobile(FaNum)_Bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layoutDirection="ltr"
                android:text="@string/disconnect_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <TextView
                fontPath="fonts/IRANSansMobile(FaNum)_Light.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center_horizontal"
                android:layoutDirection="ltr"
                android:text="@string/disconnect_description"
                android:textColor="@color/grey_40"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@color/red_2"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <Button
                android:id="@+id/disconnect_WiFi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:layoutDirection="ltr"
                android:text="@string/disconnect_wifi"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_11ssp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@android:color/white"
                android:layoutDirection="ltr" />

            <Button
                android:id="@+id/disconnect_MobileData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:layoutDirection="ltr"
                android:text="@string/disconnect_data"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>