<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/increaseCredit_MainContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/increaseCredit_CreditTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawableEnd="@drawable/ic_credit"
        android:drawableRight="@drawable/ic_credit"
        android:drawablePadding="10dp"
        android:layoutDirection="ltr"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/my_credit_text"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <View
        android:id="@+id/increaseCredit_ViewLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/increaseCredit_CreditTextView"
        android:background="@color/sky"
        android:layoutDirection="ltr" />

    <LinearLayout
        android:id="@+id/increaseCredit_CreditLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/increaseCredit_ViewLine"
        android:background="@android:color/white"
        android:layoutDirection="ltr"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_label"
                android:drawableRight="@drawable/ic_label"
                android:drawablePadding="10dp"
                android:gravity="center|right"
                android:layoutDirection="ltr"
                android:padding="10dp"
                android:text="@string/type_credit"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_coins"
                android:drawableRight="@drawable/ic_coins"
                android:drawablePadding="10dp"
                android:gravity="center|right"
                android:layoutDirection="ltr"
                android:padding="10dp"
                android:text="@string/amount_credit"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/increaseCredit_PickerSubject"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="3"
                android:descendantFocusability="blocksDescendants"
                android:layoutDirection="ltr" />

            <NumberPicker
                android:id="@+id/increaseCredit_PickerCredit"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="2"
                android:descendantFocusability="blocksDescendants"
                android:layoutDirection="ltr" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layoutDirection="ltr">

            <TextView
                android:id="@+id/increaseCredit_PickerSummary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layoutDirection="ltr"
                android:maxLines="1"
                android:textColor="@color/green"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/increaseCredit_Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/increaseCredit_CreditLayout"
        android:background="@color/sky"
        android:layoutDirection="ltr"
        android:text="@string/payment"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>